[package]
name = "leetcode-stats-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1.20.1", features=["full"]}
warp = "0.3.2"
reqwest = {version="0.11.11", features=["blocking"]}
serde = {version="1.0.140", features = ["derive"]}
serde_json = "1.0.82"
log = "0.4"
pretty_env_logger = "0.4"

[dev-dependencies]
httpmock = "0.6"